--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
         function gameOver() {
             gameActive = false;
             gameOverElement.style.display = 'block';
-            finalScoreElement.textContent = `Erreichte Höhe: ${score}m`;
+            finalScoreElement.textContent = `Height: ${score}m`;
         }
         
         // Spiel neu starten
